--- a/backup/css/main.css
+++ b/backup/css/main.css
@@ -82,3 +82,33 @@ body {
     /* Add styles here */
   }
   
+  nav {
+    display: flex;
+    justify-content: center;
+  }
+  
+  nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: #333;
+    border-radius: 5px;
+  }
+  
+  nav li {
+    margin: 0 1em;
+  }
+  
+  nav a {
+    display: block;
+    padding: 1em;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  nav a:hover {
+    background-color: #444;
+  }
+  
