--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -8,6 +8,11 @@ body {
     font-family: 'Fauna One', serif;
     font-size: 17px;
     line-height: 1.8!important;
+    width: 100%;
+    height: 100%;
+    margin: 0; /* remove the default margin */
+    padding: 0; /* remove the default padding */
+    overflow: hidden; /* hide any content that overflows the element */
 }
 html {
     overflow-x: hidden;
@@ -109,6 +114,7 @@ a:visited {
 .navbar-brand > img {
     max-width: 127px;
     z-index: 9999;
+    transform: translateX(-20px);
 }
 @media (max-width: 768px) {
     .navbar-brand {
@@ -524,3 +530,81 @@ a:visited {
     height: 100vh!important;
     object-fit: cover;
 }
+
+/* add cards for services  */
+.services {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .card {
+    border: 1px solid #ccc;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    width: 100%;
+    height: auto;
+    margin: 10px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .card h3 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
+  .card p {
+    font-size: 14px;
+    color: #666;
+    line-height: 1.5;
+  }
+  
+/* adding a contact us circle  */
+.contact-us {
+    width: 200px;
+    height: 200px;
+    background-color: #F0F0F0;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  
+  .contact-us::before {
+    content: "";
+    width: 60px;
+    height: 60px;
+    background-color: #333;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .contact-us::after {
+    content: "Contact Us";
+    font-size: 16px;
+    color: #333;
+    text-align: center;
+    display: inline-block;
+    background: url(/docs/img/email_icon.png) no-repeat;
+    width: 20px;
+    height: 30px;
+  }
+  
+  a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
