--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -102,7 +102,7 @@ a:visited {
     width: auto;
     display: inline-block;
     border: none;
-    /* float: right; */
+    float: right;
     z-index: 99999;
 }
 .navbar-fixed-top {
