--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,7 +8,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  max-width: 100%;
+  max-width: 100vw;
 }
 
 .container {
