--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -5,13 +5,14 @@
 }
 
 html, body {
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
 
 .container {
-  
+  height: 100%;
   display: flex;
   overflow: hidden;
   scroll-behavior: smooth;
@@ -22,10 +23,8 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-
   display: flex;
   flex-direction: column;
-  /*justify-content: flex-start; */
   margin-bottom: 20px; /* Add margin to create separation between sections */
 }
 
@@ -80,8 +79,12 @@ footer {
   margin-top: auto; /* Push the footer to the bottom of the container */
 }
 
+p {
+  font-size: 16px;
+}
+
 /* Media Query for mobile devices */
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .container {
     flex-direction: column;
   }
