--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -71,6 +71,13 @@ html, body {
   background-color: #FFFFFF;
 }
 
+header {
+  background-color: #000000;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
 footer {
   background-color: #000000;
   color: #fff;
