--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -63,7 +63,7 @@ html, body {
 }
 
 .section:nth-child(2) {
-  background-color: #CCCCCC;
+  background-color: #000000;
 }
 
 .section:nth-child(3) {
@@ -111,6 +111,7 @@ p {
 
   .box {
     background-color: #FFFFFF;
+    padding-top: 45px;
     border-radius: 4px;
     padding: 20px;
     box-sizing: border-box;
