--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -63,7 +63,7 @@ html, body {
 }
 
 .section:nth-child(2) {
-  background-color: #000000;
+  background-color: #FFFFFF;
 }
 
 .section:nth-child(3) {
