--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,7 +8,7 @@ html, body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'IntelOne Display', sans-serif;
 }
 
 .container {
