--- a/docs/css/main_resume.css
+++ b/docs/css/main_resume.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
   }
+
   html {
     height: 100%;  
   }
@@ -10,7 +11,7 @@
   body {
     min-height: 100%;  
     background: #eee;
-    font-family: 'Lato', sans-serif;
+    font-family: 'IntelOne Display', sans-serif;
     font-weight: 400;
     color: #222;
     font-size: 14px;
